spec/.test/config/valid/only/aliases.php
<?php

return [
    'aliases' => [
        'id1' => 'alias31',
        'id2' => 'alias32',
    ],
];
