spec/.test/config/invalid/isect/aliases/parameters.php
<?php

return [
    'parameters' => [
        'id' => 'parameter',
    ],
    'aliases' => [
        'id' => 'alias',
    ],
];
